# docs/swagger.yaml
@@ -41,6 +41,20 @@ definitions:
       draft_transportation:
         $ref: '#/definitions/schemes.TransportationShort'
     type: object
+  schemes.RegisterResp:
+    properties:
+      ok:
+        type: boolean
+    type: object
+  schemes.SwaggerLoginResp:
+    properties:
+      access_token:
+        type: string
+      expires_in:
+        type: integer
+      token_type:
+        type: string
+    type: object
   schemes.TransportationShort:
     properties:
       container_count:
@@ -72,7 +86,7 @@ paths:
             $ref: '#/definitions/schemes.GetAllContainersResponse'
       summary: Получить все контейнеры
       tags:
-      - api
+      - containers
   /api/containers/{container_id}:
     delete:
       description: Удаляет контейнер по id
@@ -87,7 +101,7 @@ paths:
           description: OK
       summary: Удалить контейнер
       tags:
-      - api
+      - containers
     get:
       description: Возвращает более подробную информацию об одном контейнере
       parameters:
@@ -105,7 +119,7 @@ paths:
             $ref: '#/definitions/ds.Container'
       summary: Получить один контейнер
       tags:
-      - api
+      - containers
     post:
       consumes:
       - multipart/form-data
@@ -155,7 +169,7 @@ paths:
           description: OK
       summary: Добавить контейнер
       tags:
-      - api
+      - containers
     put:
       consumes:
       - multipart/form-data
@@ -203,7 +217,7 @@ paths:
       responses: {}
       summary: Изменить котейнер
       tags:
-      - api
+      - containers
   /api/containers/{container_id}/add_to_transportation:
     post:
       description: Добавить выбранный контейнер в черновик перевозки
@@ -224,7 +238,73 @@ paths:
             type: array
       summary: Добавить в перевозку
       tags:
-      - api
+      - containers
+  /auth/login/:
+    post:
+      consumes:
+      - application/json
+      description: Авторизует пользователя по логиню, паролю и отдаёт jwt токен для
+        дальнейших запросов
+      parameters:
+      - description: User login
+        in: formData
+        name: login
+        required: true
+        type: string
+      - description: User password
+        in: formData
+        name: password
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/schemes.SwaggerLoginResp'
+      summary: Авторизация
+      tags:
+      - auth
+  /auth/loguot/:
+    post:
+      consumes:
+      - application/json
+      description: Выход из аккаунта
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+      summary: Выйти из аккаунта
+      tags:
+      - auth
+  /auth/sign_up/:
+    post:
+      consumes:
+      - application/json
+      description: Регистрация нового пользователя
+      parameters:
+      - description: User login
+        in: formData
+        name: login
+        required: true
+        type: string
+      - description: User password
+        in: formData
+        name: password
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/schemes.RegisterResp'
+      summary: Регистрация
+      tags:
+      - auth
 schemes:
 - http
 swagger: "2.0"
